@startuml

title __FACTCAST-CLIENT-GRPC's Class Diagram__\n

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.ClientStreamObserver {
    }
  }
  

  namespace org.factcast.client.grpc {
    interface org.factcast.client.grpc.FactCastGrpcChannelFactory {
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.FactcastRemoteException {
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.GrpcFactStore {
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.IncompatibleProtocolVersions {
    }
  }
  

  namespace org.factcast.client.grpc {
    namespace codec {
      class org.factcast.client.grpc.codec.Lz4GrpcClientCodec {
      }
    }
  }
  

  namespace org.factcast.client.grpc {
    namespace codec {
      class org.factcast.client.grpc.codec.SnappyGrpcClientCodec {
      }
    }
  }
  

  org.factcast.client.grpc.ClientStreamObserver .up.|> io.grpc.stub.StreamObserver
  org.factcast.client.grpc.ClientStreamObserver o-- org.factcast.grpc.api.conv.ProtoConverter : converter
  org.factcast.client.grpc.ClientStreamObserver o-- org.factcast.core.subscription.SubscriptionImpl : subscription
  org.factcast.client.grpc.GrpcFactStore .up.|> org.factcast.core.store.FactStore
  org.factcast.client.grpc.GrpcFactStore .up.|> org.springframework.beans.factory.SmartInitializingSingleton
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.gen.RemoteFactStoreGrpc.RemoteFactStoreBlockingStub : blockingStub
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.CompressionCodecs : codecs
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.conv.ProtoConverter : converter
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.gen.RemoteFactStoreGrpc.RemoteFactStoreStub : stub
  org.factcast.client.grpc.codec.Lz4GrpcClientCodec .up.|> io.grpc.Codec
  org.factcast.client.grpc.codec.SnappyGrpcClientCodec .up.|> io.grpc.Codec


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
